app/objects/Atempt__c.object
<CustomObject>
    <fields>
        <fullName>Atempt_Date__c</fullName>
        <label>Atempt Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Atempts</relationshipLabel>
        <relationshipName>Atempts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>element__c</fullName>
        <label>element</label>
        <referenceTo>Element__c</referenceTo>
        <relationshipLabel>Atempts</relationshipLabel>
        <relationshipName>Atempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pass/completed</fullName>
                    <default>true</default>
                    <label>pass/completed</label>
                </value>
                <value>
                    <fullName>pass/uncompleted</fullName>
                </value>
                <value>
                    <fullName>pass/inProgress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>total_element__c</fullName>
        <formula>element__r.certification__r.total_element__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total element</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Atempt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Atempt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>